--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,11 @@
+.terminado {
+    position: absolute; 
+    right: 15px; 
+    color: #e73636;
+}
 
+.enproceso {
+    position: absolute; 
+    right: 15px; 
+    color: #12e651
+}
